[tool.poetry]
name = "awesome-bot"
version = "0.1.0"
description = "Awesome Bot from Toster"
authors = ["Toster dsodx@pm.me"]
readme = "README.md"
packages = [{include = "awesome_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0b7"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
