[tool.poetry]
name = "awesome-bot"
version = "0.1.0"
description = "Awesome Bot from Toster"
authors = ["Yarik dsodx@pm.me"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "3.0.0rc2"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
fluentogram = "^1.1.6"
nats-py = "^2.3.1"
taskiq = "^0.8.2"
taskiq-nats = "^0.3.0"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
